# camera-position-by-line

./: .gitignore  Check_Res.m  LICENSE  check_r_solver.m  lines.m  paths.m  paths_cube.m  paths_real_tests.m  real_tests.m  solver_two_equations.m  two_equations.m
R_CGR/: generate_instances_for_eq_cgr.m  get_r_cgr.m  get_r_equations_cgr.m  get_r_with_prime_cgr.m
R_abcd/: generate_instances_for_eq_abcd.m  get_r_abcd.m  get_r_equations_abcd.m  get_r_with_prime_abcd.m  solver_get_r_equations_abcd.m  solver_get_r_equations_abcd10.m  solver_get_r_equations_abcd11.m  solver_get_r_equations_abcd12.m  solver_get_r_equations_abcd13.m  solver_get_r_equations_abcd14.m  solver_get_r_equations_abcd15.m  solver_get_r_equations_abcd16.m  solver_get_r_equations_abcd17.m  solver_get_r_equations_abcd18.m  solver_get_r_equations_abcd19.m  solver_get_r_equations_abcd2.m  solver_get_r_equations_abcd20.m  solver_get_r_equations_abcd21.m  solver_get_r_equations_abcd22.m  solver_get_r_equations_abcd23.m  solver_get_r_equations_abcd24.m  solver_get_r_equations_abcd3.m  solver_get_r_equations_abcd4.m  solver_get_r_equations_abcd5.m  solver_get_r_equations_abcd6.m  solver_get_r_equations_abcd7.m  solver_get_r_equations_abcd8.m  solver_get_r_equations_abcd9.m
R_abcd_simplier/: generate_instances_for_eq_abcd_simplier.m  get_r_abcd_simplier.m  get_r_equations_abcd_simplier.m  get_r_with_prime_abcd_simplier.m
R_known_vertical_cs/: generate_instances_for_eq_known_cs.m  get_r_equations_known_cs.m  (+5 more)
cpp/: CMakeLists.txt  draw_lines.cpp  draw_lines.h  main.cpp  match_lines.cpp  match_lines.h
(+121 files in other folders)
